--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
-<!-- templates/base_pages.html -->
+<!DOCTYPE html>
 <html>
-    <head>
-        <a href="{% url 'home' %}">Home</a> | <a href="{% url 'blog' %}">Blog</a> | <a href="{% url 'about' %}">About</a> |      
-    </head>
-    <body>
-        <div>
-            {% block content %}
-            {% endblock content %}
-        </div>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <a href="{% url 'home' %}">Home</a> | <a href="{% url 'blog' %}">Blog</a> | <a href="{% url 'about' %}">About</a> |      
+  <title>{% block title %}Newspaper App{% endblock title %}</title>
+</head>
+<body>
+  <main>
+    {% block content %}
+    {% endblock content %}
+  </main>
+</body>
 </html>
